# logic-gates

./: .clang-format  CMakeLists.txt  deps.nix  flake.nix  justfile
.github/workflows/: mirror.yaml
include/: constants.hpp
runtime/: CMakeLists.txt  Cargo.toml
runtime/src/: cli.rs  constants.rs  debug.rs  error.rs  lib.rs  logic.rs  logic.rs.bak  watcher.rs
src/: main.cpp
