[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
cxx-build = "1.0.188"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
cxx = "1.0.188"
mlua = { version = "0.11.5", features = [
  "luajit",
  "vendored",
  "async",
  "send",
  "userdata-wrappers",
] }
notify = { version = "8.2.0", default-features = false, features = [
  "crossbeam-channel",
] }
walkdir = "2.5.0"
